Added routing for pages with some scripts

--- a/src/app/shared/main-layout/main-layout.component.html
+++ b/src/app/shared/main-layout/main-layout.component.html
@@ -1,1 +1,22 @@
+<nav class="navbar bg-dark">
+    <h2>Online Shop</h2>
+
+    <ul>
+        <li routerLink="active">
+            <a href="#">Phone</a>
+        </li>
+
+        <li routerLink="active">
+            <a href="#">Tablet</a>
+        </li>
+
+        <li routerLink="active">
+            <a href="#">Laptop</a>
+        </li>
+
+        <li routerLink="active">
+            <a [routerLink]="['/cart']">Cart</a>
+        </li>
+    </ul>
+</nav>
 <router-outlet></router-outlet>
